<resources>
    <string name="app_name">NatifeAppTwo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age_label">Age:</string>
    <string name="gender_label">Gender:</string>
    <string name="nationality_label">Nationality:</string>
    <string name="email_label">Email:</string>
    <string name="date_label">Date:</string>
    <string name="password_label">Password:</string>
    <string name="address_label">Address:</string>
    <string name="tv_name_text">%s %s %s</string>
    <string name="tv_short_name">%s %s</string>
    <string name="tv_location_text">%s, %s, %d</string>
    <string name="tv_address_text">%s, %s, %d</string>
</resources>